# cas-analyzer

./: README.md  api.py  app_context.py  chatbot_ui.py  main.py  pyproject.toml  types_.py
agents/: cas_etl_workflow.py  cas_parser.py  pf_analyzer.py  pf_analyzer_agent.py  pf_analyzer_graph.py
api/: routes.py
config/: app_context.py  constants.py
data/: checkpoints.sqlite-shm  checkpoints.sqlite-wal  navall.csv  scheme_cat_asset_cls.csv
domain/: cas_parser.py
reference_data/: scheme_data.csv
services/: openai_service.py  session_service.py
tools/: cap_composition_tool.py  filter_transactions_tool.py  schema.py  xirr_tool.py
ui/: chatbot.py
utils/: db_utils.py  generic_utils.py
