[project]
name = "mf-cap-split"
version = "0.1.0"
description = ""
authors = [
    {name = "Kamalakar Chaudhari",email = "kamalc@strataprop.com"}
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "casparser (>=0.8.0,<0.9.0)",
    "openai (>=1.93.0,<2.0.0)",
    "pymupdf (>=1.26.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "gradio (>=5.35.0,<6.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "streamlit (>=1.46.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
