[project]
name = "mf-cap-split"
version = "0.1.0"
description = ""
authors = [
    {name = "Kamalakar Chaudhari",email = "kamalc@strataprop.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai (>=1.93.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "gradio (>=5.35.0,<6.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "casparser[fast] (>=0.8.0,<0.9.0)",
    "plotly (>=6.2.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
