[project]
name = "cas-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Kamalakar Chaudhari",email = "chaudhari.ky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai (>=1.93.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "gradio (>=5.35.0,<6.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "casparser[fast] (>=0.8.0,<0.9.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "langgraph (>=0.5.3,<0.6.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langgraph-checkpoint-sqlite (>=2.0.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"

# 🧹 Ruff configuration
pre-commit = "^4.2.0"
[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

# Enable rule sets (can include others like "B", "D", "C", etc.)
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]  # Ignore long lines (optional)

# Exclude some folders
exclude = ["migrations", "__pycache__", "build", "dist", ".venv"]

# Enable formatting if Ruff is used as formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

